fix grid padding issue and make them aligned

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,9 @@ img {
   border-radius: 50%
 }
 p {
-  font-size: 15px;
+  font-size: 16px;
   color: white;
+  margin: auto;
 
 }
 .title {
@@ -62,9 +63,21 @@ a {
   background-color: white;
 }
 
-.gridimg {
+.gridimg1 {
   width: 200px;
   border-radius: 10%;
+  padding-bottom: 200px;
+}
+
+.gridimg2 {
+  width: 200px;
+  border-radius: 10%;
+}
+
+.gridimg3 {
+  width: 200px;
+  border-radius: 10%;
+  padding-bottom: 70px
 }
 
 .listlnk {
